--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   "author": "Manuel Pereira",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/pug": "^2.0.10",
     "cross-env": "^7.0.3",
     "supabase": "^1.148.6"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.7",
+    "express": "^4.18.3",
     "html-pdf-node": "^1.0.8",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "save-dev": "^0.0.1-security"
   }
 }
