--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "description": "Funciones Edge de Supabase",
   "main": "index.js",
   "scripts": {
-    "test": "npm run dev"
+    "dev": "nodemon server.js"
   },
   "author": "Manuel Pereira",
   "license": "ISC",
   "devDependencies": {
     "cross-env": "^7.0.3",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.0",
     "supabase": "^1.148.6"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.8",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "html-pdf-node": "^1.0.8",
+    "luxon": "^3.4.4",
+    "nodemailer": "^6.9.12",
     "pug": "^3.0.2"
   }
 }
