--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/luxon": "^3.4.2",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.11.28",
     "@types/pug": "^2.0.10",
     "cross-env": "^7.0.3",
     "morgan": "^1.10.0",
